# ternary-fitness-python

./: .gitignore  README.md  pyproject.toml
docs/: FUTURE-INTEGRATION.md
src/ternary_fitness/: __init__.py  elitism.py  evaluator.py  landscape.py  population.py  selection.py
src/ternary_fitness/tests/: test_fitness.py
